kustomization/overlays/prod/factorio-relic/networkpolicy/allow-from-factorio-to-internet.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-factorio-to-internet-networkpolicy
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.168.0.0/16
  podSelector:
    matchLabels:
      app.kubernetes.io/name: factorio
  policyTypes:
    - Egress
