kustomization/overlays/prod/factorio-relic/networkpolicy/allow-to-admin-from-traefik.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-admin-from-traefik-networkpolicy
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: factorio
  policyTypes:
    - Ingress
